# serverless-template

./:  costs.py  .gitignore  Makefile  api_key.sh  clean.sh  deploy.sh  main.tf  setup_all.sh  todo.md
.github/workflows/: deploy.yml
api_specification/: openapi.json
e2e/: env.sh  pyproject.toml
e2e/tests/: conftest.py  cw_logs_manager.py  dynamo_db_client.py  rest_client.py  test_pet_flow.py
handlers/: lambda.mk  lambda_python.mk
handlers/get_questions/: pyproject.toml
handlers/get_questions/src/: main.py
handlers/pet/create/: pyproject.toml
handlers/pet/create/src/: main.py
handlers/pet/delete/: pyproject.toml
handlers/pet/delete/src/: main.py
handlers/pet/get/: pyproject.toml
handlers/pet/get/src/: main.py
handlers/pet/index/: pyproject.toml
handlers/pet/index/src/: main.py
handlers/pet/listener/: pyproject.toml
handlers/pet/listener/src/: main.py
handlers/pet/update/: pyproject.toml
handlers/pet/update/src/: main.py
handlers/storage/create/: .gitignore  pyproject.toml
handlers/storage/create/src/: main.py
handlers/storage/get/: pyproject.toml
handlers/storage/get/src/: main.py  test.py
libs/mirror_storage_support/: pyproject.toml
libs/petshop_support/: pyproject.toml
scripts/: api_key.sh  costs.py
shared/lib/: pyproject.toml
shared/lib/lib/: graphql_test.py
terraform/site/: api_gateway.tf  dynamodb.tf  eventbridge_pipe1.tf  lambdas.tf  outputs.tf  provider.tf  variables.tf
terraform_api_gateway/: get_questions.tf  get_tags.tf
terraform_app/: api_gateway_v2.tf  get_questions.tf  get_tags.tf
terraform_app/modules/api_gateway_v2/: main.tf  variables.tf
terraform_app/modules/restful_endpoint/: main.tf
terraform_cert/: main.tf  provider.tf
terraform_rest_proxy/: main.tf
tf_rest_open_api/: a.py  data.tf  main.tf  openapi.json
