[tool.poetry]
name = "examon-get-questions"
version = "1.0.0"
description = "Examon Get Questions Lambda Handler"
authors = ["Jarrod Folino <jdfolino@icloud.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
examon = "0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
