[tool.poetry]
name = "mirror_storage_support"
version = "0.1.0"
description = ""
authors = ["Jarrod Folino <jarrod.folino@fundingcircle.com>"]
readme = "README.md"
packages = [{ include = "mirror_storage_support" }]

[tool.poetry.dependencies]
python = "3.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
