[tool.poetry]
name = "petshop_support"
version = "0.1.0"
description = ""
authors = ["Jarrod Folino <jarrod.folino@fundingcircle.com>"]
readme = "README.md"
packages = [{ include = "petshop_support" }]

[tool.poetry.dependencies]
python = "3.11.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
