[tool.poetry]
name = "lib"
version = "0.1.0"
description = ""
authors = ["Jarrod Folino <jarrod.folino@fundingcircle.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
graphene-mongo = "^0.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
